--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -23,12 +23,12 @@
     <section class="who-intro">
         <h4>Who Am I?</h4>
         <img src="images/OIP.jpeg">
-        <p>I'm a Khalid Sahar BS computer Science student.</p>
+        <p>I'm Muhamamad Hassan software engineering student.</p>
     </section>
 
     <section class="what">
         <h1>What Am I?</h1>
-        <p>I am a freelance Graphic Designer.</p>
+        <p>I am a FullStack web developer.</p>
         <form class="form-container">
             <input class="nosubmit" type="search" placeholder="Search...">
         </form>   
@@ -37,15 +37,17 @@
     
 <section class="where">
     <h3>Where To Find My codes?</h3>
-    <a class="link-1" href="https://github.com/mhasgit/cpp-playground">cpp-playground</a>
-    <a class="link-2" href="https://github.com/mhasgit/Projects">Projects</a>
-    <a class="link-3" href="https://github.com/mhasgit/html-css">html-css</a>
-    <a class="link-4" href="https://github.com/mhasgit/CodingChronicles">CodingChronicles</a>
-    <a class="link-5" href="https://github.com/mhasgit/AspNetCoreMvcLab">AspNetCoreMvcLab</a>
-    <a class="link-6" href="https://github.com/mhasgit/BethanysPieSHop">BethanysPieSHop</a>
-    <a class="link-7" href="https://github.com/mhasgit/AdvanceCSharp">AdvanceCSharp</a>
-    <a class="link-8" href="https://github.com/mhasgit/Learning-C-">Learning-C++</a>
-    <a class="link-9" href="https://github.com/mhasgit/CSharp">CSharp</a>
+    <a class="link-1" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo01">Task No 01</a>
+    <a class="link-2" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo02">Task No 02</a>
+    <a class="link-3" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo03">Task No 03</a>
+    <a class="link-4" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo04">Task No 04</a>
+    <a class="link-5" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo05">Task No 05</a>
+    <a class="link-6" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo06">Task No 06</a>
+    <a class="link-7" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo07">Task No 07</a>
+    <a class="link-8" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo08">Task No 08</a>
+    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo09">Task No 09</a>
+    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo010">Task No 10</a>
+    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo011">Task No 11</a>
   </section>
 
   <section class="footer">
