--- a/MyProfile/index.html
+++ b/MyProfile/index.html
@@ -22,7 +22,7 @@
 
     <section class="who-intro">
         <h4>Who Am I?</h4>
-        <img src="images/OIP.jpeg">
+        <img src="images/profile.png">
         <p>I'm Muhamamad Hassan software engineering student.</p>
     </section>
 
@@ -37,17 +37,17 @@
     
 <section class="where">
     <h3>Where To Find My codes?</h3>
-    <a class="link-1" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo01">Task No 01</a>
-    <a class="link-2" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo02">Task No 02</a>
-    <a class="link-3" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo03">Task No 03</a>
-    <a class="link-4" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo04">Task No 04</a>
-    <a class="link-5" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo05">Task No 05</a>
-    <a class="link-6" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo06">Task No 06</a>
-    <a class="link-7" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo07">Task No 07</a>
-    <a class="link-8" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo08">Task No 08</a>
-    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo09">Task No 09</a>
-    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo010">Task No 10</a>
-    <a class="link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo011">Task No 11</a>
+    <a class="link link-1" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo01">Task No 01</a>
+    <a class="link link-2" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo02">Task No 02</a>
+    <a class="link link-3" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo03">Task No 03</a>
+    <a class="link link-4" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo04">Task No 04</a>
+    <a class="link link-5" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo05">Task No 05</a>
+    <a class="link link-6" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo06">Task No 06</a>
+    <a class="link link-7" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo07">Task No 07</a>
+    <a class="link link-8" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo08">Task No 08</a>
+    <a class="link link-9" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo09">Task No 09</a>
+    <a class="link link-10" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo10">Task No 10</a>
+    <a class="link link-11" href="https://github.com/mhasgit/WebDesignDev/tree/main/LabReportNo11">Task No 11</a>
   </section>
 
   <section class="footer">
